--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,22 +1,44 @@
 ---
-// Component Imports
-import Button from '../components/Button.astro';
-
-// Full Astro Component Syntax:
-// https://docs.astro.build/core-concepts/astro-components/
+import NavMenu from '../components/NavMenu.astro';
 ---
 
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<link rel="icon" type="image/x-icon" href="/favicon.ico" />
-		<title>Astro + TailwindCSS</title>
-		<style global>
-			@import "../styles/global.css";
-		</style>
-	</head>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <title>Astro + TailwindCSS</title>
+    <style lang="scss" global>
+      @import '../styles/global.scss';
+    </style>
+  </head>
 
-	<body>
-		<Button>I’m a Tailwind Button!</Button>
-	</body>
+  <body class="bg-dark-green border-[12px] border-gold h-full w-full">
+    <NavMenu />
+
+    <main>
+      <div class="flex justify-center">
+        <div class="flex justify-center max-w-7xl p-32 w-full">
+          <div>
+            <h1 class="py-32 text-5xl text-center text-gold lg:text-8xl">
+              Middleburg's first coworking space
+            </h1>
+
+            <div class="flex justify-center w-full">
+              <img height="100px" src="/img/1787-keys.png" width="100px" />
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="bg-cream flex justify-center w-full">
+        <div class="flex justify-center max-w-7xl p-32 w-full"></div>
+      </div>
+
+      <div class="flex justify-center w-full" id="perks">
+        <div class="flex justify-center max-w-7xl p-32 w-full">
+          <h2 class="text-4xl text-white lg:text-6xl">Why 1787?</h2>
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
