Update favicon and title

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import NavMenu from '../components/NavMenu.astro';
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <title>Astro + TailwindCSS</title>
+    <title>1787 Middleburg Coworking Space</title>
     <style lang="scss" global>
       @import '../styles/global.scss';
     </style>
