--- a/src/components/NavMenu.astro
+++ b/src/components/NavMenu.astro
@@ -26,7 +26,7 @@
         itemid="1787logo"
       >
         <img
-          alt="1787 Logo"
+          alt="1787 Logo with fox and keys"
           class="h-32 w-auto lg:h-52"
           itemprop="url"
           height="229px"
