--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,7 +24,7 @@ import NavMenu from '../components/NavMenu.astro';
             </h1>
 
             <div class="flex justify-center w-full">
-              <img height="100px" src="/img/1787-keys.png" width="100px" />
+              <img alt="" height="100px" src="/img/1787-keys.png" width="100px" />
             </div>
           </div>
         </div>
