--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import NavMenu from '../components/NavMenu.astro';
+import Footer from '../components/Footer.astro';
 ---
 
 <html lang="en">
@@ -7,6 +8,24 @@ import NavMenu from '../components/NavMenu.astro';
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <title>1787 Middleburg Coworking Space</title>
+
+    <meta property="og:site_name" content="1787 Coworking" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="1787 Middleburg Coworking Space" />
+    <meta property="og:url" content="https://1787.work/" />
+    <meta property="og:image" content="/img/logo.png">
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:height" content="229">
+    <meta property="og:image:width" content="220">
+    <meta
+      property="og:description"
+      content="1787 is Middleburg's first coworking space. We have a dedicated fiber internet connection, a convenient location in downtown Middleburg, and many membership plans to choose from."
+    />
+    <meta
+      name="description"
+      content="1787 is Middleburg's first coworking space. We have a dedicated fiber internet connection, a convenient location in downtown Middleburg, and many membership plans to choose from."
+    />
+
     <style lang="scss" global>
       @import '../styles/global.scss';
     </style>
@@ -24,21 +43,73 @@ import NavMenu from '../components/NavMenu.astro';
             </h1>
 
             <div class="flex justify-center w-full">
-              <img alt="" height="100px" src="/img/1787-keys.png" width="100px" />
+              <img alt="" height="100px" src="/img/1787-keys.png" width="100px"
+              />
             </div>
           </div>
         </div>
       </div>
 
-      <div class="bg-cream flex justify-center w-full">
-        <div class="flex justify-center max-w-7xl p-32 w-full"></div>
+      <div class="bg-cream flex justify-center w-full" id="about">
+        <div class="flex justify-center max-w-7xl p-32 w-full">
+          <div class="grid grid-cols-2 w-full">
+            <div>
+              <h2 class="text-4xl text-dark-green lg:text-6xl">
+                Headline goes here
+              </h2>
+
+              <p class="text-dark-green">Lorem ipsum more text goes here</p>
+            </div>
+          </div>
+        </div>
       </div>
 
       <div class="flex justify-center w-full" id="perks">
         <div class="flex justify-center max-w-7xl p-32 w-full">
-          <h2 class="text-4xl text-white lg:text-6xl">Why 1787?</h2>
+          <div class="grid grid-cols-3 w-full">
+            <h2 class="col-span-1 text-4xl text-white lg:text-6xl">
+              Why 1787?
+            </h2>
+
+            <div class="col-span-2"></div>
+          </div>
+        </div>
+      </div>
+
+      <div class="bg-gold flex justify-center w-full" id="perks">
+        <div class="flex justify-center max-w-7xl p-32 w-full">
+          <div class="text-center w-full">
+            <h2
+              class="m-auto text-4xl text-center text-white lg:text-6xl w-1/2"
+            >
+              Pricing &amp; Membership
+            </h2>
+
+            <div class="grid grid-cols-1 gap-5 w-full lg:grid-cols-3">
+              <div class="bg-white">
+                <h3 class="text-7xl text-dark-green">
+                  $199
+                  <span class="-ml-4 text-2xl">/mo</span>
+                </h3>
+              </div>
+              <div class="bg-dark-green">
+                <h3 class="text-7xl text-white">
+                  $399
+                  <span class="-ml-4 text-2xl">/mo</span>
+                </h3>
+              </div>
+              <div class="bg-white">
+                <h3 class="text-7xl text-dark-green">
+                  $699
+                  <span class="-ml-4 text-2xl">/mo</span>
+                </h3>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </main>
+
+    <Footer />
   </body>
 </html>
