Add arrows, fix overflow

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -54,7 +54,7 @@ import Footer from '../components/Footer.astro';
     </style>
   </head>
 
-  <body class="bg-dark-green border-[12px] border-gold h-full w-full">
+  <body class="bg-dark-green border-[12px] border-gold h-full overflow-x-hidden w-full">
     <NavMenu />
 
     <main>
