--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -14,24 +14,88 @@ const images = [
       <div class="flex flex-col">
         <div class="flex-grow">
           <h2 class="text-4xl text-dark-green lg:text-6xl">
-            Headline goes here
+            Finally, premium coworking space in Middleburg
           </h2>
 
-          <p class="text-dark-green">Lorem ipsum more text goes here</p>
+          <p class="my-4 text-dark-green text-lg">
+            Don't drive all the way to Leesburg or Ashburn just for a nice
+            coworking space. 1787's Middleburg coworking space includes blazing
+            fast internet, unlimited snacks and drinks, and many membership
+            options to fit your needs and budget.
+          </p>
         </div>
 
-        <div class="hidden justify-self-end lg:block">
-          01/05
-          <button onclick="swiper.slidePrev()">Prev</button>
-          <button onclick="swiper.slideNext()">Next</button>
+        <div
+          class="hidden items-center justify-self-end justify-between lg:flex"
+        >
+          <span class="font-heading text-lg">01/05</span>
+          <div>
+            <button
+              class="border border-gold inline-flex h-14 items-center justify-center mr-3 rounded-full text-gold transition-colors w-14 hover:bg-gold hover:text-white"
+              onclick="swiper.slidePrev()"
+            >
+              <svg
+                width="27"
+                height="15"
+                viewBox="0 0 27 15"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  class="stroke-current"
+                  d="M27 7.07959L2.1885 7.07959"
+                  stroke="#AA7A4E"
+                  stroke-width="1.5"></path>
+                <path
+                  class="stroke-current"
+                  d="M0.506571 7.15967V7.15967C4.26605 7.15967 7.31372 10.2073 7.31372 13.9668L7.31372 14.6475"
+                  stroke="#AA7A4E"
+                  stroke-width="1.5"></path>
+                <path
+                  class="stroke-current"
+                  d="M0.506571 7.15967V7.15967C4.26605 7.15967 7.31372 4.112 7.31372 0.352518V0.352518"
+                  stroke="#AA7A4E"
+                  stroke-width="1.5"></path>
+              </svg>
+            </button>
+            <button
+              class="border border-gold inline-flex h-14 items-center justify-center rounded-full text-gold transition-colors w-14 hover:bg-gold hover:text-white"
+              onclick="swiper.slideNext()"
+            >
+              <svg
+                class="rotate-180"
+                width="27"
+                height="15"
+                viewBox="0 0 27 15"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  class="stroke-current"
+                  d="M27 7.07959L2.1885 7.07959"
+                  stroke="#AA7A4E"
+                  stroke-width="1.5"></path>
+                <path
+                  class="stroke-current"
+                  d="M0.506571 7.15967V7.15967C4.26605 7.15967 7.31372 10.2073 7.31372 13.9668L7.31372 14.6475"
+                  stroke="#AA7A4E"
+                  stroke-width="1.5"></path>
+                <path
+                  class="stroke-current"
+                  d="M0.506571 7.15967V7.15967C4.26605 7.15967 7.31372 4.112 7.31372 0.352518V0.352518"
+                  stroke="#AA7A4E"
+                  stroke-width="1.5"></path>
+              </svg>
+            </button>
+          </div>
         </div>
       </div>
 
       <div>
-        <div class="swiper lg:w-[675px]">
+        <div class="swiper w-full xl:w-[500px] 2xl:w-[700px]">
           <div class="swiper-wrapper">
             {images.map((image) => (
-              <div class="swiper-slide !h-72 !w-72 lg:!h-[525px] lg:!w-[525px]">
+              <div class="swiper-slide !h-72 !w-72 xl:!h-[525px] xl:!w-[525px]">
                 <img class="h-full w-full object-cover" src={image} />
               </div>
             ))}
