--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import About from '../components/About.jsx';
 import Contact from '../components/Contact.astro';
 import NavMenu from '../components/NavMenu.astro';
+import Perks from '../components/Perks.astro';
 import Pricing from '../components/Pricing.astro';
 import Footer from '../components/Footer.astro';
 ---
@@ -54,7 +55,9 @@ import Footer from '../components/Footer.astro';
     </style>
   </head>
 
-  <body class="bg-dark-green border-[12px] border-gold h-full overflow-x-hidden w-full">
+  <body
+    class="bg-dark-green border-[12px] border-gold h-full overflow-x-hidden w-full"
+  >
     <NavMenu />
 
     <main>
@@ -75,38 +78,10 @@ import Footer from '../components/Footer.astro';
 
       <About client:only />
 
-      <div class="flex justify-center w-full" id="perks">
-        <div class="flex justify-center max-w-6xl py-20 w-full lg:py-32">
-          <div class="grid grid-cols-1 p-6 w-full lg:grid-cols-3">
-            <h2 class=" text-4xl text-white lg:col-span-1 lg:text-6xl">
-              Why 1787?
-            </h2>
-
-            <div class="lg:col-span-2">
-              <ul class="grid grid-cols-1 gap-12 lg:grid-cols-2">
-                <li>
-                  <img class="mb-4" src="/svgs/icons/pin.svg" />
-                  <h3 class="text-gold text-2xl">Location</h3>
-                </li>
-                <li>
-                  <img class="mb-4" src="/svgs/icons/lightning.svg" />
-                  <h3 class="text-gold text-2xl">High-speed Internet</h3>
-                </li>
-                <li>
-                  <img class="mb-4" src="/svgs/icons/snacks.svg" />
-                  <h3 class="text-gold text-2xl">Snacks & Drinks</h3>
-                </li>
-                <li>
-                  <img class="mb-4" src="/svgs/icons/bookable.svg" />
-                  <h3 class="text-gold text-2xl">Bookable Spaces</h3>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
+      <Perks />
 
       <Pricing />
+
       <Contact />
     </main>
 
