Fix some style issues

--- a/src/components/Perks.astro
+++ b/src/components/Perks.astro
@@ -1,7 +1,7 @@
 <div class="flex justify-center w-full" id="perks">
   <div class="flex justify-center max-w-6xl py-20 w-full lg:py-32">
     <div class="grid grid-cols-1 p-6 w-full lg:grid-cols-3">
-      <h2 class=" text-4xl text-white lg:col-span-1 lg:text-6xl">Why 1787?</h2>
+      <h2 class="mb-12 text-4xl text-white lg:col-span-1 lg:text-6xl">Why 1787?</h2>
 
       <div class="lg:col-span-2">
         <ul class="grid grid-cols-1 gap-12 lg:grid-cols-2">
