--- a/src/components/Pricing.astro
+++ b/src/components/Pricing.astro
@@ -2,7 +2,7 @@
   <div class="flex justify-center max-w-6xl py-20 w-full lg:py-32">
     <div class="w-full">
       <h2
-        class="m-auto pb-16 text-4xl text-center text-white lg:text-6xl w-1/2"
+        class="m-auto pb-16 text-4xl text-center text-white w-52 lg:text-6xl lg:w-1/2"
       >
         Pricing &amp; Membership
       </h2>
