--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,4 +1,4 @@
-<footer class="flex justify-center p-14 w-full">
+<footer class="flex justify-center p-6 w-full lg:p-14">
   <nav class="grid grid-cols-4 items-center max-w-6xl lg:grid-cols-5">
     <a class="footer-link" href="#about"> About </a>
 
@@ -23,6 +23,6 @@
 
 <style lang="scss">
   .footer-link {
-    @apply px-4 font-heading text-lg text-gold hover:text-light-gold lg:px-20;
+    @apply px-2 font-heading text-lg text-gold hover:text-light-gold lg:px-20;
   }
 </style>
