Get carousel working

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import About from '../components/About.jsx';
+import About from '../components/About.astro';
 import Contact from '../components/Contact.astro';
 import NavMenu from '../components/NavMenu.astro';
 import Perks from '../components/Perks.astro';
@@ -76,7 +76,7 @@ import Footer from '../components/Footer.astro';
         </div>
       </div>
 
-      <About client:only />
+      <About />
 
       <Perks />
 
