Start on contact section

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -1,10 +1,18 @@
 <div class="bg-cream flex justify-center w-full" id="contact">
   <div class="flex justify-center max-w-6xl py-20 w-full lg:py-32">
-    <div
-      class="grid grid-cols-1 p-6 w-full lg:grid-cols-2"
-    >
+    <div class="grid grid-cols-1 gap-x-44 gap-y-11 p-6 w-full lg:grid-cols-2">
       <div>
         <h2 class="text-3xl text-dark-green lg:text-6xl">Contact</h2>
+
+        <p class="mb-8 mt-3 text-lg lg:mt-8">
+          Interested in joining 1787 Coworking or learning more about our space
+          or membership plans? Please fill out our contact form and we'll get
+          back with you shortly.
+        </p>
+
+        <img class="h-auto mb-8 w-24 lg:mb-14" src="/img/key.png" />
+
+        <h4 class="text-lg">111 E Washington St Middleburg, VA 20117</h4>
       </div>
       <div class="">Inputs here</div>
     </div>
