--- a/src/components/Perks.astro
+++ b/src/components/Perks.astro
@@ -4,7 +4,7 @@
       <h2 class="mb-12 text-4xl text-white lg:col-span-1 lg:text-6xl">Why 1787?</h2>
 
       <div class="lg:col-span-2">
-        <ul class="grid grid-cols-1 gap-12 lg:grid-cols-2">
+        <ul class="grid grid-cols-1 gap-x-24 gap-y-12 lg:grid-cols-2">
           <li>
             <img class="mb-4" src="/svgs/icons/pin.svg" />
             <h3 class="mb-2 text-gold text-2xl">Location</h3>
