--- a/src/components/Pricing.astro
+++ b/src/components/Pricing.astro
@@ -8,37 +8,148 @@
       </h2>
 
       <div class="grid grid-cols-1 gap-5 w-full lg:grid-cols-3">
-        <div class="bg-white p-6 text-dark-green">
-          <div class="flex items-center mb-16">
+        <div class="bg-white flex flex-col p-6 text-dark-green">
+          <div class="flex items-center mb-18">
             <img class="mr-2" src="/svgs/icons/dots.svg" />
             <h3 class="font-body text-2xl">Flex Desk</h3>
           </div>
-          <h4 class="text-7xl ">
+
+          <h4 class="mb-11 text-7xl">
             $199
             <span class="-ml-4 text-2xl">/mo</span>
           </h4>
+
+          <ul class="flex-grow">
+            <li class="flex items-center mb-6">
+              <div class="check-icon bg-dark-green">
+                <img src="/svgs/icons/check.svg" />
+              </div>
+
+              First come, first serve desk
+            </li>
+
+            <li class="flex items-center mb-6">
+              <div class="check-icon bg-dark-green">
+                <img src="/svgs/icons/check.svg" />
+              </div>
+
+              Unlimited beverages and snacks
+            </li>
+
+            <li class="flex items-center mb-6">
+              <div class="check-icon bg-dark-green">
+                <img src="/svgs/icons/check.svg" />
+              </div>
+
+              6 conference room hours /mo
+            </li>
+          </ul>
+
+          <button class="signup-button bg-dark-green text-white">
+            Sign up
+          </button>
         </div>
-        <div class="bg-dark-green p-6 text-white">
-          <div class="flex items-center mb-16">
+
+        <div class="bg-dark-green flex flex-col p-6 text-white">
+          <div class="flex items-center mb-18">
             <img class="mr-2" src="/svgs/icons/dots.svg" />
             <h3 class="font-body text-2xl">Dedicated Desk</h3>
           </div>
-          <h4 class="text-7xl">
+
+          <h4 class="mb-11 text-7xl">
             $399
             <span class="-ml-4 text-2xl">/mo</span>
           </h4>
+
+          <p class="font-bold mb-4 text-gold text-xs uppercase">
+            Everything in flex, plus
+          </p>
+
+          <ul class="flex-grow">
+            <li class="flex items-center mb-6">
+              <div class="check-icon bg-gold">
+                <img src="/svgs/icons/check.svg" />
+              </div>
+
+              Dedicated, brandable desk
+            </li>
+
+            <li class="flex items-center mb-6">
+              <div class="check-icon bg-gold">
+                <img src="/svgs/icons/check.svg" />
+              </div>
+
+              Lockable storage
+            </li>
+
+            <li class="flex items-center mb-6">
+              <div class="check-icon bg-gold">
+                <img src="/svgs/icons/check.svg" />
+              </div>
+
+              8 conference room hours /mo
+            </li>
+          </ul>
+
+          <button class="signup-button bg-gold text-white"> Sign up </button>
         </div>
-        <div class="bg-white p-6 text-dark-green">
-          <div class="flex items-center mb-16">
+
+        <div class="bg-white flex flex-col p-6 text-dark-green">
+          <div class="flex items-center mb-18">
             <img class="mr-2" src="/svgs/icons/dots.svg" />
             <h3 class="font-body text-2xl">Private Office</h3>
           </div>
-          <h4 class="text-7xl">
+
+          <h4 class="mb-11 text-7xl">
             $699
             <span class="-ml-4 text-2xl">/mo</span>
           </h4>
+
+          <p class="font-bold mb-4 text-gold text-xs uppercase">
+            Everything in dedicated, plus
+          </p>
+
+          <ul class="flex-grow">
+            <li class="flex items-center mb-6">
+              <div class="check-icon bg-dark-green">
+                <img src="/svgs/icons/check.svg" />
+              </div>
+
+              Private, lockable office space
+            </li>
+
+            <li class="flex items-center mb-6">
+              <div class="check-icon bg-dark-green">
+                <img src="/svgs/icons/check.svg" />
+              </div>
+
+              Branded signage options
+            </li>
+
+            <li class="flex items-center mb-6">
+              <div class="check-icon bg-dark-green">
+                <img src="/svgs/icons/check.svg" />
+              </div>
+
+              12 conference room hours /mo
+            </li>
+          </ul>
+
+          <button class="signup-button bg-dark-green text-white">
+            Sign up
+          </button>
         </div>
       </div>
     </div>
   </div>
 </div>
+
+<style lang="scss">
+  .check-icon {
+    @apply mr-4 inline-flex h-6 w-6 items-center justify-center justify-self-end rounded-full;
+  }
+
+  .signup-button {
+    @apply bottom-0 mt-8 w-full p-4 text-lg transition-all hover:brightness-125 lg:mt-18;
+  }
+</style>
