Add signup links

--- a/src/components/Pricing.astro
+++ b/src/components/Pricing.astro
@@ -45,9 +45,12 @@
             </li>
           </ul>
 
-          <button class="signup-button bg-dark-green text-white">
+          <a
+            class="signup-button bg-dark-green text-white"
+            href="https://middleburg.optixapp.com/signup/"
+          >
             Sign up
-          </button>
+          </a>
         </div>
 
         <div class="bg-dark-green flex flex-col p-6 text-white">
@@ -91,7 +94,12 @@
             </li>
           </ul>
 
-          <button class="signup-button bg-gold text-white"> Sign up </button>
+          <a
+            class="signup-button bg-gold text-white"
+            href="https://middleburg.optixapp.com/signup/"
+          >
+            Sign up
+          </a>
         </div>
 
         <div class="bg-white flex flex-col p-6 text-dark-green">
@@ -135,9 +143,12 @@
             </li>
           </ul>
 
-          <button class="signup-button bg-dark-green text-white">
+          <a
+            class="signup-button bg-dark-green text-white"
+            href="https://middleburg.optixapp.com/signup/"
+          >
             Sign up
-          </button>
+          </a>
         </div>
       </div>
     </div>
