--- a/src/components/Pricing.astro
+++ b/src/components/Pricing.astro
@@ -161,6 +161,6 @@
   }
 
   .signup-button {
-    @apply bottom-0 mt-8 w-full p-4 text-lg transition-all hover:brightness-125 lg:mt-18;
+    @apply bottom-0 mt-8 w-full p-4 text-center text-lg transition-all hover:brightness-125 lg:mt-18;
   }
 </style>
