Update mobile nav

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -64,11 +64,11 @@ import Footer from '../components/Footer.astro';
       <div class="flex justify-center">
         <div class="flex justify-center max-w-6xl py-20 w-full lg:py-32">
           <div>
-            <h1 class="p-6 text-5xl text-center text-gold lg:py-32 lg:text-8xl">
+            <h1 class="p-6 py-18 text-5xl text-center text-gold lg:py-32 lg:text-8xl">
               Middleburg's first coworking space
             </h1>
 
-            <div class="flex justify-center w-full">
+            <div class="flex justify-center mb-6 w-full lg:mb-0">
               <img alt="" height="100px" src="/img/1787-keys.png" width="100px"
               />
             </div>
