--- a/src/components/NavMenu.astro
+++ b/src/components/NavMenu.astro
@@ -36,68 +36,64 @@
       <div class="hidden" itemprop="name">1787 Coworking</div>
     </a>
 
-    <div class="flex lg:hidden justify-end m-4">
+    <div class="flex lg:hidden justify-end m-2">
       <button
         aria-label="Open navigation menu"
-        class="flex items-center px-3 py-2 text-gold text-xl"
+        class="px-2"
         onclick="toggleNavMenu(true)"
       >
         <svg
-          class="hamburger-menu fill-gold"
-          version="1.1"
-          id="Layer_1"
+          class="h-2 w-6"
+          fill="none"
+          height="9"
+          viewBox="0 0 22 9"
+          width="22"
           xmlns="http://www.w3.org/2000/svg"
-          xmlns:xlink="http://www.w3.org/1999/xlink"
-          x="0px"
-          y="0px"
-          viewBox="0 0 512 512"
-          style="enable-background:new 0 0 512 512;"
-          xml:space="preserve"
+          ><g stroke="#aa7a4e" stroke-width="1.33333"
+            ><path d="m0 1.33333h21.3333"></path><path d="m0 8.33325h21.3333"
+            ></path></g
+          ></svg
         >
-          <g>
-            <path
-              d="M491.318,235.318H20.682C9.26,235.318,0,244.577,0,256s9.26,20.682,20.682,20.682h470.636
-			c11.423,0,20.682-9.259,20.682-20.682C512,244.578,502.741,235.318,491.318,235.318z"
-            ></path>
-          </g>
-          <g>
-            <path
-              d="M491.318,78.439H20.682C9.26,78.439,0,87.699,0,99.121c0,11.422,9.26,20.682,20.682,20.682h470.636
-			c11.423,0,20.682-9.26,20.682-20.682C512,87.699,502.741,78.439,491.318,78.439z"
-            ></path>
-          </g>
-          <g>
-            <path
-              d="M491.318,392.197H20.682C9.26,392.197,0,401.456,0,412.879s9.26,20.682,20.682,20.682h470.636
-			c11.423,0,20.682-9.259,20.682-20.682S502.741,392.197,491.318,392.197z"></path>
-          </g>
-        </svg>
       </button>
     </div>
 
     <div
       class="nav-links bg-dark-green border-[12px] border-gold hidden h-full justify-center left-0 top-0 w-screen z-50 lg:border-none lg:flex lg:h-auto lg:top-auto lg:w-full"
     >
+      <div class="absolute left-1/2 my-6 top-0 -translate-x-1/2 lg:hidden">
+        <img
+          alt="1787 Logo with fox and keys"
+          class="h-32 w-auto"
+          itemprop="url"
+          height="229px"
+          format="webp"
+          src="/img/logo.png"
+          width="220px"
+        />
+      </div>
+
       <div class="lg:gap-x-48 lg:grid lg:grid-cols-2">
-        <div class="flex lg:hidden justify-end m-4">
+        <div class="flex lg:hidden justify-end m-2">
           <button
             aria-label="Close navigation menu"
-            class="cursor-pointer"
+            class="cursor-pointer mr-6 mt-4 px-3 py-2"
             onclick="toggleNavMenu(false)"
           >
             <svg
-              class="h-10 fill-gold m-2 p-2 w-10"
-              enable-background="new 0 0 47.971 47.971"
-              viewBox="0 0 47.971 47.971"
+              fill="none"
+              height="17"
+              viewBox="0 0 17 17"
+              width="17"
               xmlns="http://www.w3.org/2000/svg"
-              ><path
-                d="m28.228 23.986 18.864-18.864c1.172-1.171 1.172-3.071 0-4.242-1.172-1.172-3.07-1.172-4.242 0l-18.864 18.864-18.865-18.864c-1.172-1.172-3.07-1.172-4.242 0-1.172 1.171-1.172 3.071 0 4.242l18.865 18.864-18.865 18.864c-1.172 1.171-1.172 3.071 0 4.242.586.585 1.354.878 2.121.878s1.535-.293 2.121-.879l18.865-18.864 18.864 18.864c.586.586 1.354.879 2.121.879s1.535-.293 2.121-.879c1.172-1.171 1.172-3.071 0-4.242z"
-              ></path></svg
+              ><g stroke="#aa7a4e" stroke-width="1.33333"
+                ><path d="m1.12402 16.085 15.08498-15.08498"></path><path
+                  d="m16.085 16.085-15.08498-15.08498"></path></g
+              ></svg
             >
           </button>
         </div>
 
-        <div class="lg:flex">
+        <div class="mt-36 lg:flex lg:mt-0">
           <a class="nav-link" href="#about" onclick="toggleNavMenu(false)">
             About
           </a>
@@ -140,13 +136,8 @@
 </script>
 
 <style lang="scss">
-  .hamburger-menu {
-    height: 36px;
-    width: 36px;
-  }
-
   .nav-link {
-    @apply block font-heading px-20 text-gold text-5xl transition-colors lg:text-lg;
+    @apply block w-full px-20 text-center font-heading text-5xl leading-[80px] text-gold transition-colors lg:w-auto lg:text-lg;
 
     &:hover {
       @apply text-light-gold;
