--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -16,7 +16,7 @@ const images = [
       <div class="flex flex-col">
         <div class="flex-grow">
           <h2 class="text-4xl text-dark-green lg:text-6xl">
-            Finally, premium coworking space in the heart of historic Middleburg
+            Premium coworking space in the heart of historic Middleburg
           </h2>
 
           <p class="my-4 text-dark-green text-lg">
