--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -21,7 +21,7 @@ const images = [
 
           <p class="my-4 text-dark-green text-lg">
             At 1787, you won't need to drive all the way to Leesburg or Ashburn 
-            for an elevated coworking space experience. With fiber-optic, 
+            for an elevated coworking space experience. With a fiber-optic, 
             high-speed internet connection, unlimited and locally sourced 
             organic snacks and drinks, and many membership options to fit 
             your needs and budget, 1787 is your answer to getting work done.
