--- a/src/components/NavMenu.astro
+++ b/src/components/NavMenu.astro
@@ -117,7 +117,7 @@
   </div>
 </nav>
 
-<script>
+<script is:inline>
   function toggleNavMenu(open) {
     const mobileNavShown = window.innerWidth < 1024;
     if (mobileNavShown) {
