Remove dedicated desk, update pictures

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -2,11 +2,11 @@
 import { Img } from 'astro-imagetools/components';
 
 const images = [
-  { src: '/src/images/space/1.png', caption: '' },
-  { src: '/src/images/space/2.png', caption: '' },
-  { src: '/src/images/space/3.png', caption: '' },
-  { src: '/src/images/space/4.png', caption: '' },
-  { src: '/src/images/space/5.png', caption: '' }
+  { src: '/src/images/space/1.jpg', caption: '' },
+  { src: '/src/images/space/2.jpg', caption: '' },
+  { src: '/src/images/space/3.jpg', caption: '' },
+  { src: '/src/images/space/4.jpg', caption: '' },
+  { src: '/src/images/space/5.jpg', caption: '' }
 ];
 ---
 
